Adds used fonts to list items and buttons. Adds information modal. Adds keyboard events

--- a/app/partials/home-contact.html
+++ b/app/partials/home-contact.html
@@ -34,10 +34,10 @@
 						</div>
 						<div class="col-sm-12">
 						 <span class="pull-right">
-							<span>Send</span>
+							<span class="font__secondary">Send</span>
 						 </span>
 						 <span class="pull-right">
-						 	<span>Reset</span>
+						 	<span class="font__secondary">Reset</span>
 						 </span>
 						</div>
 					</form>
