--- a/app/partials/home-header.html
+++ b/app/partials/home-header.html
@@ -15,7 +15,7 @@
 				<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
 
 				<span class="header__button">
-					<span>Go for it</span>
+					<span class="font__primary">Go for it</span>
 				</span>
 			</div>
 		</div>
