--- a/app/partials/home-prices.html
+++ b/app/partials/home-prices.html
@@ -15,13 +15,15 @@
 					<p class="prices__tag"><span>$</span> 127</p>
 					<div class="prices__list">
 						<ul>
-							<li>First feature</li>
-							<li>Important stuff</li>
-							<li>Longer availability</li>
-							<li>Let's you be awesome</li>
-							<li>Infernal strategy</li>
+							<li class="font__secondary">First feature</li>
+							<li class="font__secondary">Important stuff</li>
+							<li class="font__secondary">Longer availability</li>
+							<li class="font__secondary">Let's you be awesome</li>
+							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">Purchase</span>
+						<span class="prices__button">
+							<span class="font__secondary">Purchase</span>
+						</span>
 					</div>
 				</div>
 			</li>
@@ -33,13 +35,15 @@
 					<p class="prices__tag"><span>$</span> 309</p>
 					<div class="prices__list">
 						<ul>
-							<li>First feature</li>
-							<li>Important stuff</li>
-							<li>Longer availability</li>
-							<li>Let's you be awesome</li>
-							<li>Infernal strategy</li>
+							<li class="font__secondary">First feature</li>
+							<li class="font__secondary">Important stuff</li>
+							<li class="font__secondary">Longer availability</li>
+							<li class="font__secondary">Let's you be awesome</li>
+							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">Purchase</span>
+						<span class="prices__button">
+							<span class="font__secondary">Purchase</span>
+						</span>
 					</div>
 				</div>
 			</li>
@@ -51,13 +55,15 @@
 					<p class="prices__tag"><span>$</span> 548</p>
 					<div class="prices__list">
 						<ul>
-							<li>First feature</li>
-							<li>Important stuff</li>
-							<li>Longer availability</li>
-							<li>Let's you be awesome</li>
-							<li>Infernal strategy</li>
+							<li class="font__secondary">First feature</li>
+							<li class="font__secondary">Important stuff</li>
+							<li class="font__secondary">Longer availability</li>
+							<li class="font__secondary">Let's you be awesome</li>
+							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">Purchase</span>
+						<span class="prices__button">
+							<span class="font__secondary">Purchase</span>
+						</span>
 					</div>
 				</div>
 			</li>
@@ -69,13 +75,15 @@
 					<p class="prices__tag"><span>$</span> 666</p>
 					<div class="prices__list">
 						<ul>
-							<li>First feature</li>
-							<li>Important stuff</li>
-							<li>Longer availability</li>
-							<li>Let's you be awesome</li>
-							<li>Infernal strategy</li>
+							<li class="font__secondary">First feature</li>
+							<li class="font__secondary">Important stuff</li>
+							<li class="font__secondary">Longer availability</li>
+							<li class="font__secondary">Let's you be awesome</li>
+							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">Purchase</span>
+						<span class="prices__button">
+							<span class="font__secondary">Purchase</span>
+						</span>
 					</div>
 				</div>
 			</li>
