Added actions panel. Added sharing current scheme action. Added share all saved schemes action. Added load shared schemes action. Added about me info and hotkeys. Added hover transitions to different panel items. Built projects

--- a/app/partials/home-nav.html
+++ b/app/partials/home-nav.html
@@ -1,7 +1,7 @@
 <nav id="home-nav">
 	<div class="nav__container container">
 		<div class="nav__logo">
-			<a href="#home-nav">fontRun</a>
+			<a href="#home-nav" class="font__primary">fontRun</a>
 		</div>
 
 		<ul class="nav__items">
