--- a/app/styles/app/_fr-ui.scss
+++ b/app/styles/app/_fr-ui.scss
@@ -1,3 +1,97 @@
+.fr-ui {
+	.-h1, .-h2, .-h3, .-h4, .-h5, .-h6, p, li, span {
+		font-family: $fr-font-primary;
+		font-weight: 300;
+	}
+
+	.-h1 {
+		font-size: 30px;
+	}
+
+	.-h2 {
+		font-size: 26px;
+	}
+
+	.-h3 {
+		font-size: 22px;
+	}
+
+	.-h4 {
+		font-size: 20px;
+	}
+
+	.-h5 {
+		font-size: 18px;
+	}
+
+	.-h6 {
+		font-size: 14px;
+	}
+
+	p {
+		font-size: 16px;
+	}
+
+	textarea {
+		display: block;
+		width: 100%;
+		max-width: 100%;
+		padding: 10px;
+		color: #FFF;
+		background-color: $fr-color-secondary-darker;
+	}
+
+	.fr-button {
+		display: inline-block;
+		padding: 0 15px;
+		height: 35px;
+		background-color: #FFF;
+		cursor: pointer;
+
+		em {
+			font-family: $fr-font-primary;
+			font-weight: 400;
+			font-size: 16px;
+			font-style: normal;
+			text-transform: uppercase;
+			line-height: 35px;
+			color: $fr-color-secondary-darker;
+		}
+	}
+
+	.ui__actions {
+		li {
+			display: -webkit-flex;
+			display: flex;
+			-webkit-align-items: center;
+			align-items: center;
+			cursor: pointer;
+
+			&:not(:first-child) {
+				margin-top: 10px;
+			}
+
+			&:hover {
+				span {
+					color: $fr-color-secondary-darker;
+					background-color: #FFF;
+				}
+			}
+		}
+
+		span {
+			margin-right: 10px;
+			width: 35px;
+			height: 35px;
+			font-size: 14px;
+			line-height: 35px;
+			text-align: center;
+			background-color: $fr-color-secondary-darker;
+			transition: all 0.5s ease;
+		}
+	}
+}
+
 .fr-side-menu__open {
 	position: fixed;
 	top: 10px;
@@ -33,8 +127,6 @@
 
 	.side-menu__title {
 		position: relative;
-		font-weight: 300;
-		font-size: 2.2em;
 
 		&.side-menu__title--collapsable {
 			cursor: pointer;
@@ -59,26 +151,6 @@
 				opacity: 1;
 			}
 		}
-	}
-
-	.-h2 {
-		font-size: 1.9em;
-	}
-
-	.-h3 {
-		font-size: 1.5em;
-	}
-
-	.-h4 {
-		font-size: 1.3em;
-	}
-
-	.-h1, .-h2, .-h3, .-h4, .-h5, .-h6, p {
-		font-family: $fr-font-primary;
-	}
-
-	p {
-		font-size: 1.1em;
 	}
 
 	&.side-menu--show {
@@ -205,12 +277,24 @@
 			transition: all 0.3s ease;
 
 			&:hover {
-				color: $fr-color-main;
+				background-color: #FFF;
+				color: $fr-color-secondary-darker;
+
+				input[type='text'] {
+					color: $fr-color-secondary-darker;
+				}
 			}
 
 			&:first-child {
-				border-bottom: 2px solid $fr-color-secondary;
+				border-bottom: 4px solid $fr-color-secondary;
 			}
+		}
+
+		label,
+		input[type='text'] {
+			display: block;
+			margin-bottom: 0;
+			cursor: pointer;
 		}
 	}
 
@@ -221,9 +305,24 @@
 			align-items: center;
 			height: 35px;
 			background-color: $fr-color-secondary-darker;
+			transition: background-color 0.5s ease;
 
 			&:not(:first-child) {
 				margin-top: 10px;
+			}
+
+			&:hover {
+				background-color: #FFF;
+
+				i,
+				input[type='text'] {
+					color: $fr-color-secondary-darker;
+				}
+			}
+
+			i,
+			input[type='text'] {
+				transition: color 0.5s ease;
 			}
 
 			i {
@@ -258,9 +357,24 @@
 		min-height: 50px;
 		background-color: $fr-color-secondary-darker;
 		cursor: pointer;
+		transition: background-color 0.5s ease;
 
 		&:not(:first-child) {
 			margin-top: 10px;
+		}
+
+		&:hover {
+			background-color: #FFF;
+
+			p,
+			.loaded-scheme__add {
+				color: $fr-color-secondary-darker;
+				border-color: $fr-color-secondary-darker;
+			}
+		}
+
+		p {
+			transition: color 0.5s ease;
 		}
 
 		.loaded-scheme__colors {
@@ -319,7 +433,7 @@
 		opacity: 0;
 		position: absolute;
 		right: 15px;
-		margin-top: -19px;
+		margin-top: -21px;
 		width: 38px;
 		height: 38px;
 		font-size: 14px;
