Adds random styles to random words. Theme style fixes. Fixes input hover not changing color

--- a/app/partials/home-blog.html
+++ b/app/partials/home-blog.html
@@ -7,8 +7,8 @@
 		</div>
 	</div>
 
-	<div class="section__body container">
-		<div class="wrapper">
+	<div class="container">
+		<div class="section__body wrapper">
 			<ul class="row">
 				<li class="col-sm-4"
 					ng-repeat="item in main.blogPosts">
