--- a/app/partials/home-contact.html
+++ b/app/partials/home-contact.html
@@ -5,8 +5,8 @@
 			<h2 class="section__title">Contact us</h2>
 		</div>
 	</div>
-	<div class="section__body container">
-		<div class="wrapper">
+	<div class="container">
+		<div class="section__body wrapper">
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="contact__message">
@@ -33,10 +33,10 @@
 							<textarea name="" id="" placeholder="Your message"></textarea>
 						</div>
 						<div class="col-sm-12">
-						 <span class="pull-right">
+						 <span class="section__button">
 							<span class="font__secondary">Send</span>
 						 </span>
-						 <span class="pull-right">
+						 <span class="section__button">
 						 	<span class="font__secondary">Reset</span>
 						 </span>
 						</div>
