--- a/app/partials/home-header.html
+++ b/app/partials/home-header.html
@@ -1,20 +1,14 @@
-<header class="contentWrapper" id="home-header">
+<header id="home-header">
 	<div class="header__overlay"></div>
 	<div class="container">
 
 		<div class="row">
 			<div class="col-md-12">
-				<div class="header__tag">
-					<div class="header__tag-inner">
-						<h1>Our company</h1>
-						<h3>Bringing you the best</h3>
-					</div>
-				</div>
 
 				<h1 class="header__title">This is some text</h1>
 				<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
 
-				<span class="header__button">
+				<span class="section__button">
 					<span class="font__primary">Go for it</span>
 				</span>
 			</div>
