--- a/app/partials/home-prices.html
+++ b/app/partials/home-prices.html
@@ -7,7 +7,7 @@
 	</div>
 
 	<div class="container">
-		<ul class="row">
+		<ul class="section__body row">
 			<li class="col-sm-3">
 				<div class="prices__option">
 					<h3>Simple <br>plan</h3>
@@ -21,7 +21,7 @@
 							<li class="font__secondary">Let's you be awesome</li>
 							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">
+						<span class="section__button">
 							<span class="font__secondary">Purchase</span>
 						</span>
 					</div>
@@ -41,7 +41,7 @@
 							<li class="font__secondary">Let's you be awesome</li>
 							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">
+						<span class="section__button">
 							<span class="font__secondary">Purchase</span>
 						</span>
 					</div>
@@ -61,7 +61,7 @@
 							<li class="font__secondary">Let's you be awesome</li>
 							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">
+						<span class="section__button">
 							<span class="font__secondary">Purchase</span>
 						</span>
 					</div>
@@ -81,7 +81,7 @@
 							<li class="font__secondary">Let's you be awesome</li>
 							<li class="font__secondary">Infernal strategy</li>
 						</ul>
-						<span class="prices__button">
+						<span class="section__button">
 							<span class="font__secondary">Purchase</span>
 						</span>
 					</div>
