--- a/app/styles/base/_layout.scss
+++ b/app/styles/base/_layout.scss
@@ -2,6 +2,8 @@ body {
 	--primary-color:#F53357;
 	--secondary-color:#47384D;
 	--tertiary-color:#3F585F;
+	--primary-font:'Abril Fatface';
+	--secondary-font:'Raleway';
 }
 
 ul,
