--- a/app/partials/home-nav.html
+++ b/app/partials/home-nav.html
@@ -5,12 +5,12 @@
 		</div>
 
 		<ul class="nav__items">
-			<li class="nav__item nav__item--active"><a href="#header" class="font__primary">Home</a></li>
-			<li class="nav__item"><a href="#skills" class="font__primary">Skills</a></li>
-			<li class="nav__item"><a href="#history" class="font__primary">History</a></li>
-			<li class="nav__item"><a href="#randomWords" class="font__primary">Words</a></li>
-			<li class="nav__item"><a href="#blogPosts" class="font__primary">Blog</a></li>
-			<li class="nav__item"><a href="#contact" class="font__primary">Contact</a></li>
+			<li class="nav__item nav__item--active"><a href="#home-header" class="font__primary">Home</a></li>
+			<li class="nav__item"><a href="#home-skills" class="font__primary">Skills</a></li>
+			<li class="nav__item"><a href="#home-history" class="font__primary">History</a></li>
+			<li class="nav__item"><a href="#home-words" class="font__primary">Words</a></li>
+			<li class="nav__item"><a href="#home-blog" class="font__primary">Blog</a></li>
+			<li class="nav__item"><a href="#home-contact" class="font__primary">Contact</a></li>
 		</ul>
 
 	</div>
