--- a/app/partials/home-skill.html
+++ b/app/partials/home-skill.html
@@ -6,14 +6,14 @@
 		</div>
 	</div>
 	<div class="container">
-		<ul class="row">
+		<ul class="section__body row">
 			<li class="col-sm-4"
 				ng-repeat="skill in main.skills">
 				<div class="skills__item">
 					<h3 class="skills__item-title">{{ skill.title }}</h3>
 					<div class="skills__item-description">
 						<p>{{ skill.description }}</p>
-						<span class="skills__item-button">
+						<span class="section__button">
 							<span class="font__primary">View more</span>
 						</span>
 					</div>
