--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -1,5 +1,4 @@
 @import "compass";
-@import "../variables/colorPalette";
 @import "../variables/mixins";
 
 $theme-gray-light: #E8E8E8;
@@ -38,8 +37,26 @@ body {
 	}
 
 	.section__reload {
+		color: #FFF;
 		border-radius: 50%;
 		background-color: var(--secondary-color);
+	}
+
+	.section__button {
+		padding: 0 20px;
+		font-size: 18px;
+		color: var(--primary-color);
+		font-weight: 700;
+		text-transform: uppercase;
+		line-height: 34px;
+		background-color: transparent;
+		border: 2px solid var(--primary-color);
+		transition: all 0.4s ease-in-out;
+
+		&:hover {
+			color: #FFF;
+			background-color: var(--primary-color);
+		}
 	}
 
 	// Footer
@@ -77,7 +94,7 @@ body {
 
 // Nav bar
 #home-nav {
-	background: $theme-gray-dark url("../images/retroTile.png") repeat scroll center;
+	background-color: $theme-gray-dark;
 
 	.nav__logo {
 
@@ -94,6 +111,7 @@ body {
 	.nav__item {
 		a {
 			color: #FFF;
+			transition: color 0.5s ease;
 
 			&:hover {
 				color: var(--primary-color);
@@ -105,7 +123,7 @@ body {
 // Header
 
 #home-header {
-	background: #1a1a1a url("https://unsplash.it/1920/600/?image=1082") no-repeat scroll center;
+	background: $theme-gray-dark url("https://unsplash.it/1920/600/?image=1082") no-repeat scroll center;
 	background-size: cover;
 	border-bottom: 10px solid var(--secondary-color);
 
@@ -125,22 +143,6 @@ body {
 		background-color: var(--secondary-color);
 		opacity: 0.3;
 	}
-
-	.header__button {
-		padding: 6px 20px;
-		font-size: 18px;
-		color: var(--primary-color);
-		font-weight: 700;
-		text-transform: uppercase;
-		background-color: transparent;
-		border: 2px solid var(--primary-color);
-		transition: all 0.4s ease-in-out;
-
-		&:hover {
-			color: #FFF;
-			background-color: var(--primary-color);
-		}
-	}
 }
 
 
@@ -155,7 +157,7 @@ body {
 		h3 {
 			position: relative;
 			margin: 0;
-			padding: 25px 15px 15px;
+			padding: 15px;
 			color: var(--primary-color);
 
 			&:before {
@@ -170,25 +172,13 @@ body {
 		}
 
 		p {
-			margin: 0;
 			padding: 15px;
 			color: $theme-gray-dark;
 		}
 	}
 
-	.skills__item-button {
-		margin-bottom: 10px;
-		padding: 0;
-		font-size: 18px;
-		color: $theme-gray-dark;
-		font-weight: 300;
-		text-transform: lowercase;
-		background-color: transparent;
-		border: none;
-
-		&:hover {
-			color: var(--secondary-color); //lighten
-		}
+	.section__button {
+		margin: 0 15px 15px;
 	}
 }
 
@@ -267,10 +257,9 @@ body {
 #home-prices {
 	margin-bottom: 100px;
 
-	.row {
-		margin-right: 0;
-		margin-left: 0;
-		padding-top: 20px;
+	.prices__option {
+		padding: 15px;
+		background-color: $theme-gray-light
 	}
 
 	h3 {
@@ -279,7 +268,6 @@ body {
 	}
 
 	h4 {
-		font-size: 18px;
 		font-weight: 300;
 		color: var(--secondary-color);
 		text-transform: uppercase;
@@ -288,13 +276,12 @@ body {
 	.prices__tag {
 		margin-bottom: 15px;
 		font-weight: 700;
+		color: var(--tertiary-color);
 	}
 
 	.prices__list {
 		ul {
 			text-align: left;
-			padding-left: 3%;
-			padding-right: 3%;
 		}
 
 		li {
@@ -305,25 +292,8 @@ body {
 		}
 	}
 
-	.prices__button {
-		display: inline-block;
+	.section__button {
 		margin-top: 20px;
-		margin-bottom: -40px;
-		padding: 0;
-		width: 100px;
-		height: 100px;
-		font-size: 14px;
-		color: #FFF;
-		line-height: 100px;
-		border-radius: 50%;
-		background-color: var(--primary-color);
-		@include box-shadow(0 4px var(--primary-color)); //darken
-		cursor: pointer;
-
-		&:hover {
-			background-color: var(--primary-color); //lighten
-			@include box-shadow(0 4px var(--primary-color));
-		}
 	}
 }
 
